# sirius-client

./: .sirius.ini  CMakeLists.txt  LICENSE  Makefile  README.md  ask_question.c  ask_question.h  file2memory.c  file2memory.h  globaldefs.h  image_matching.c  image_matching.h  post_file.c  post_file.h  sirius.c  speech_recognition.c  speech_recognition.h
